--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 build/
+.ccls-cache/
 
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
