--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,7 @@ build:
   before_script:
     - apt-get update --yes && apt-get install --yes cmake
   script:
-    - mkdir -p build
-    - cd build
-    - cmake ..
-    - make
+    - make cmake
   artifacts:
     paths:
       - build/
@@ -28,5 +25,4 @@ test:
   before_script:
     - apt-get update --yes && apt-get install --yes cmake
   script:
-    - cd build
-    - ctest
+    - make test
