Install ninja CI/CD

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
   only:
     - master
   before_script:
-    - apt-get update --yes && apt-get install --yes cmake
+    - apt-get update --yes && apt-get install --yes cmake ninja
   script:
     - make cmake
   artifacts:
@@ -23,6 +23,6 @@ test:
   only:
     - master
   before_script:
-    - apt-get update --yes && apt-get install --yes cmake
+    - apt-get update --yes && apt-get install --yes cmake ninja
   script:
     - make test
